[gd_scene load_steps=11 format=2]

[ext_resource path="res://Prefabs/GUI/Sign/Chain/FrontLink.tscn" type="PackedScene" id=1]
[ext_resource path="res://Prefabs/GUI/Sign/Chain/BackLink.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/GUI/Signs/Main/Exit.png" type="Texture" id=3]
[ext_resource path="res://Art/GUI/Signs/Main/TitleSign.png" type="Texture" id=4]
[ext_resource path="res://Art/GUI/Signs/Main/Play.png" type="Texture" id=5]
[ext_resource path="res://Art/GUI/Signs/Main/Options.png" type="Texture" id=6]
[ext_resource path="res://Scripts/GUI/Signs/MenuSign.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 114, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 136, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 76, 24 )

[node name="MenuSign" type="Node2D"]
use_parent_material = true
script = ExtResource( 7 )

[node name="Mount" type="StaticBody2D" parent="."]
use_parent_material = true
position = Vector2( 0, -440 )
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mount"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Chain1" type="Node2D" parent="."]
use_parent_material = true
position = Vector2( -112, -442 )

[node name="MountJoin" type="PinJoint2D" parent="Chain1"]
visible = false
position = Vector2( 0, 8 )
node_a = NodePath("../../Mount")
node_b = NodePath("../FrontLink1")

[node name="FrontLink1" parent="Chain1" instance=ExtResource( 1 )]
position = Vector2( 0, 12 )

[node name="Join1" type="PinJoint2D" parent="Chain1"]
visible = false
position = Vector2( 0, 16 )
node_a = NodePath("../FrontLink1")
node_b = NodePath("../BackLink1")

[node name="BackLink1" parent="Chain1" instance=ExtResource( 2 )]
position = Vector2( 0, 21 )

[node name="Join2" type="PinJoint2D" parent="Chain1"]
visible = false
position = Vector2( 0, 25 )
node_a = NodePath("../BackLink1")
node_b = NodePath("../FrontLink2")

[node name="FrontLink2" parent="Chain1" instance=ExtResource( 1 )]
position = Vector2( 0, 30 )

[node name="Join3" type="PinJoint2D" parent="Chain1"]
visible = false
position = Vector2( 0, 34 )
node_a = NodePath("../FrontLink2")
node_b = NodePath("../BackLink2")

[node name="BackLink2" parent="Chain1" instance=ExtResource( 2 )]
position = Vector2( 0, 39 )

[node name="Join4" type="PinJoint2D" parent="Chain1"]
visible = false
position = Vector2( 0, 43 )
node_a = NodePath("../BackLink2")
node_b = NodePath("../FrontLink3")

[node name="FrontLink3" parent="Chain1" instance=ExtResource( 1 )]
position = Vector2( 0, 48 )

[node name="SignJoin" type="PinJoint2D" parent="Chain1"]
visible = false
position = Vector2( 0, 52 )
node_a = NodePath("../FrontLink3")
node_b = NodePath("../../Title")

[node name="Chain2" type="Node2D" parent="."]
use_parent_material = true
position = Vector2( 112, -442 )

[node name="MountJoin" type="PinJoint2D" parent="Chain2"]
visible = false
position = Vector2( 0, 8 )
node_a = NodePath("../../Mount")
node_b = NodePath("../FrontLink1")

[node name="FrontLink1" parent="Chain2" instance=ExtResource( 1 )]
position = Vector2( 0, 12 )

[node name="Join1" type="PinJoint2D" parent="Chain2"]
visible = false
position = Vector2( 0, 16 )
node_a = NodePath("../FrontLink1")
node_b = NodePath("../BackLink1")

[node name="BackLink1" parent="Chain2" instance=ExtResource( 2 )]
position = Vector2( 0, 21 )

[node name="Join2" type="PinJoint2D" parent="Chain2"]
visible = false
position = Vector2( 0, 25 )
node_a = NodePath("../BackLink1")
node_b = NodePath("../FrontLink2")

[node name="FrontLink2" parent="Chain2" instance=ExtResource( 1 )]
position = Vector2( 0, 30 )

[node name="Join3" type="PinJoint2D" parent="Chain2"]
visible = false
position = Vector2( 0, 34 )
node_a = NodePath("../FrontLink2")
node_b = NodePath("../BackLink2")

[node name="BackLink2" parent="Chain2" instance=ExtResource( 2 )]
position = Vector2( 0, 39 )

[node name="Join4" type="PinJoint2D" parent="Chain2"]
visible = false
position = Vector2( 0, 43 )
node_a = NodePath("../BackLink2")
node_b = NodePath("../FrontLink3")

[node name="FrontLink3" parent="Chain2" instance=ExtResource( 1 )]
position = Vector2( 0, 48 )

[node name="SignJoin" type="PinJoint2D" parent="Chain2"]
visible = false
position = Vector2( 0, 52 )
node_a = NodePath("../FrontLink3")
node_b = NodePath("../../Title")

[node name="Chain3" type="Node2D" parent="."]
use_parent_material = true
position = Vector2( -64, -342 )

[node name="MountJoin" type="PinJoint2D" parent="Chain3"]
visible = false
position = Vector2( 0, 12 )
node_a = NodePath("../../Title")
node_b = NodePath("../FrontLink")

[node name="FrontLink" parent="Chain3" instance=ExtResource( 1 )]
position = Vector2( 0, 16 )

[node name="Join1" type="PinJoint2D" parent="Chain3"]
visible = false
position = Vector2( 0, 20 )
node_a = NodePath("../FrontLink")
node_b = NodePath("../BackLink")

[node name="BackLink" parent="Chain3" instance=ExtResource( 2 )]
position = Vector2( 0, 25 )

[node name="SignJoin" type="PinJoint2D" parent="Chain3"]
visible = false
position = Vector2( 0, 28 )
node_a = NodePath("../BackLink")
node_b = NodePath("../../Play")

[node name="Chain4" type="Node2D" parent="."]
use_parent_material = true
position = Vector2( 64, -342 )

[node name="MountJoin" type="PinJoint2D" parent="Chain4"]
visible = false
position = Vector2( 0, 12 )
node_a = NodePath("../../Title")
node_b = NodePath("../FrontLink")

[node name="FrontLink" parent="Chain4" instance=ExtResource( 1 )]
position = Vector2( 0, 16 )

[node name="Join1" type="PinJoint2D" parent="Chain4"]
visible = false
position = Vector2( 0, 20 )
node_a = NodePath("../FrontLink")
node_b = NodePath("../BackLink")

[node name="BackLink" parent="Chain4" instance=ExtResource( 2 )]
position = Vector2( 0, 25 )

[node name="SignJoin" type="PinJoint2D" parent="Chain4"]
visible = false
position = Vector2( 0, 28 )
node_a = NodePath("../BackLink")
node_b = NodePath("../../Play")

[node name="Chain5" type="Node2D" parent="."]
use_parent_material = true
position = Vector2( -64, -282 )

[node name="MountJoin" type="PinJoint2D" parent="Chain5"]
visible = false
position = Vector2( 0, 12 )
node_a = NodePath("../../Play")
node_b = NodePath("../FrontLink")

[node name="FrontLink" parent="Chain5" instance=ExtResource( 1 )]
position = Vector2( 0, 16 )

[node name="Join1" type="PinJoint2D" parent="Chain5"]
visible = false
position = Vector2( 0, 20 )
node_a = NodePath("../FrontLink")
node_b = NodePath("../BackLink")

[node name="BackLink" parent="Chain5" instance=ExtResource( 2 )]
position = Vector2( 0, 25 )

[node name="SignJoin" type="PinJoint2D" parent="Chain5"]
visible = false
position = Vector2( 0, 28 )
node_a = NodePath("../BackLink")
node_b = NodePath("../../Options")

[node name="Chain6" type="Node2D" parent="."]
use_parent_material = true
position = Vector2( 64, -282 )

[node name="MountJoin" type="PinJoint2D" parent="Chain6"]
visible = false
position = Vector2( 0, 12 )
node_a = NodePath("../../Play")
node_b = NodePath("../FrontLink")

[node name="FrontLink" parent="Chain6" instance=ExtResource( 1 )]
position = Vector2( 0, 16 )

[node name="Join1" type="PinJoint2D" parent="Chain6"]
visible = false
position = Vector2( 0, 20 )
node_a = NodePath("../FrontLink")
node_b = NodePath("../BackLink")

[node name="BackLink" parent="Chain6" instance=ExtResource( 2 )]
position = Vector2( 0, 25 )

[node name="SignJoin" type="PinJoint2D" parent="Chain6"]
visible = false
position = Vector2( 0, 28 )
node_a = NodePath("../BackLink")
node_b = NodePath("../../Options")

[node name="Chain7" type="Node2D" parent="."]
use_parent_material = true
position = Vector2( -64, -223 )

[node name="MountJoin" type="PinJoint2D" parent="Chain7"]
visible = false
position = Vector2( 0, 12 )
node_a = NodePath("../../Options")
node_b = NodePath("../FrontLink")

[node name="FrontLink" parent="Chain7" instance=ExtResource( 1 )]
position = Vector2( 0, 16 )

[node name="Join1" type="PinJoint2D" parent="Chain7"]
visible = false
position = Vector2( 0, 20 )
node_a = NodePath("../FrontLink")
node_b = NodePath("../BackLink")

[node name="BackLink" parent="Chain7" instance=ExtResource( 2 )]
position = Vector2( 0, 25 )

[node name="SignJoin" type="PinJoint2D" parent="Chain7"]
visible = false
position = Vector2( 0, 28 )
node_a = NodePath("../BackLink")
node_b = NodePath("../../Exit")

[node name="Chain8" type="Node2D" parent="."]
use_parent_material = true
position = Vector2( 64, -223 )

[node name="MountJoin" type="PinJoint2D" parent="Chain8"]
visible = false
position = Vector2( 0, 12 )
node_a = NodePath("../../Options")
node_b = NodePath("../FrontLink")

[node name="FrontLink" parent="Chain8" instance=ExtResource( 1 )]
position = Vector2( 0, 16 )

[node name="Join1" type="PinJoint2D" parent="Chain8"]
visible = false
position = Vector2( 0, 20 )
node_a = NodePath("../FrontLink")
node_b = NodePath("../BackLink")

[node name="BackLink" parent="Chain8" instance=ExtResource( 2 )]
position = Vector2( 0, 25 )

[node name="SignJoin" type="PinJoint2D" parent="Chain8"]
visible = false
position = Vector2( 0, 28 )
node_a = NodePath("../BackLink")
node_b = NodePath("../../Exit")

[node name="Title" type="RigidBody2D" parent="."]
use_parent_material = true
position = Vector2( 0, -360 )
z_index = 2
collision_layer = 32
collision_mask = 32

[node name="Sprite" type="Sprite" parent="Title"]
use_parent_material = true
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Title"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Play" type="RigidBody2D" parent="."]
use_parent_material = true
position = Vector2( 0, -292 )
z_index = 2
collision_layer = 32
collision_mask = 32

[node name="Sprite" type="Sprite" parent="Play"]
use_parent_material = true
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Play" type="TextureButton" parent="Play/Sprite"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -26.5
margin_right = -80.0
margin_bottom = -26.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Play"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Options" type="RigidBody2D" parent="."]
use_parent_material = true
position = Vector2( 0, -231 )
z_index = 2
collision_layer = 32
collision_mask = 32

[node name="Sprite" type="Sprite" parent="Options"]
use_parent_material = true
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Options" type="TextureButton" parent="Options/Sprite"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -26.5
margin_right = -80.0
margin_bottom = -26.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Options"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Exit" type="RigidBody2D" parent="."]
use_parent_material = true
position = Vector2( 0, -172 )
z_index = 2
collision_layer = 32
collision_mask = 32

[node name="Sprite" type="Sprite" parent="Exit"]
use_parent_material = true
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Exit" type="TextureButton" parent="Exit/Sprite"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -26.5
margin_right = -80.0
margin_bottom = -26.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Play/Sprite/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Options/Sprite/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Exit/Sprite/Exit" to="." method="_on_Exit_pressed"]
